# control-plane/rest/openapi-specs/v0_api_spec.yaml
@@ -2126,6 +2126,7 @@ components:
         grpcEndpoint: '10.1.0.5:10124'
         id: io-engine-1
         cordonLabels: [label-1]
+        drainLabels: [label-1]
       description: io-engine storage node information
       type: object
       properties:
@@ -2138,10 +2139,15 @@ components:
           type: array
           items:
             type: string
+        drainLabels:
+          type: array
+          items:
+            type: string
       required:
         - grpcEndpoint
         - id
         - cordonLabels
+        - drainLabels
     NodeState:
       example:
         grpcEndpoint: '10.1.0.5:10124'
